# trayd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  deny.yml  deploy.yml  doc.yml  fmt-clippy.yml  test.yml  typos.yml
docs/: IPC.md  PLAN.md
examples/: abar.md  tray-tui.toml  trayd.toml
examples/ipc-examples/: get_pixmap.jsonl  subscribe.jsonl
libtrayd/src/: error.rs
libtrayd/src/dbus/: item.rs  menu.rs  watcher.rs
libtrayd/src/host/: mod.rs  tests.rs
libtrayd/src/model/: mod.rs
tray-tui/: Cargo.toml
tray-tui/src/: error.rs  main.rs
tray-tui/src/app/: mod.rs  tests.rs
tray-tui/src/config/: mod.rs  tests.rs
tray-tui/src/ipc/: mod.rs  tests.rs
trayctl/: Cargo.toml
trayctl/src/: error.rs  main.rs
trayctl/src/cli/: mod.rs  tests.rs
trayctl/src/dmenu/: mod.rs  tests.rs
trayctl/src/ipc/: mod.rs  tests.rs
trayctl/src/logger/: mod.rs
trayd/: Cargo.toml
trayd/src/: error.rs  main.rs
trayd/src/cli/: mod.rs
trayd/src/config/: mod.rs  tests.rs
trayd/src/daemon/: mod.rs
trayd/src/ipc/: client.rs  mod.rs  server.rs  tests.rs
trayd/src/logger/: mod.rs
