[workspace]
members = ["libtrayd", "trayd", "trayd-client"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
homepage = "https://github.com/Gigas002/trayd"
description = "Minimalistic wayland-native tray daemon/wrapper around dbus (`zbus`)"
keywords = ["tray", "dbus", "zbus"]
repository = "https://github.com/Gigas002/trayd"
version = "0.1.0"
