[package]
name = "tray-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal UI for trayd (IPC socket client)."
keywords.workspace = true

[[bin]]
name = "tray-tui"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
