[package]
name = "trayd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "System tray daemon and CLI (IPC server)."
keywords.workspace = true

[[bin]]
name = "trayd"
path = "src/main.rs"

[dependencies]
base64-ng = { workspace = true }
clap = { workspace = true }
libtrayd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
